src/snapshots/help_targets/netsuke__runner__help__tests__accessible_catalogue.snap
---
source: src/runner/help/tests.rs
expression: rendered
---
Actions:
  lint          Run rustdoc, Clippy, and Whitaker [* default]
  test          Run unit, behavioural, UI, and documentation tests [* default] [? conditional]
  undocumented

Targets:
  target/release/catnap  Build the optimized release binary
  plain
