src/snapshots/help_targets/netsuke__runner__help__tests__json_catalogue.snap
---
source: src/runner/help/tests.rs
expression: rendered
---
{
  "schema_version": 1,
  "generator": {
    "name": "netsuke",
    "version": "[version]"
  },
  "result": {
    "command": "help-targets",
    "actions": [
      {
        "name": "lint",
        "description": "Run rustdoc, Clippy, and Whitaker",
        "default": true,
        "conditional": false
      },
      {
        "name": "test",
        "description": "Run unit, behavioural, UI, and documentation tests",
        "default": true,
        "conditional": true
      },
      {
        "name": "undocumented",
        "description": null,
        "default": false,
        "conditional": false
      }
    ],
    "targets": [
      {
        "name": "target/release/catnap",
        "description": "Build the optimized release binary",
        "default": false,
        "conditional": false
      },
      {
        "name": "plain",
        "description": null,
        "default": false,
        "conditional": false
      }
    ]
  }
}
