src/snapshots/help_targets/netsuke__runner__help__tests__localized_catalogue_es_es.snap
---
source: src/runner/help/tests.rs
expression: rendered
---
Acciones:
  lint          Run rustdoc, Clippy, and Whitaker [★ predeterminado]
  test          Run unit, behavioural, UI, and documentation tests [★ predeterminado] [◇ condicional]
  undocumented

Objetivos:
  target/release/catnap  Build the optimized release binary
  plain
